<resources>
    <string name="app_name">Dog Care</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="telephone">Telephone</string>
    <string name="profile">PROFILE</string>
    <string name="dogs">Dogs</string>
    <string name="dog_walk">DOG WALK</string>
    <string name="adoprt_a_dog">ADOPRT A DOG</string>
    <string name="leave_your_dog">LEAVE YOUR DOG</string>
    <string name="ask_a_vet">ASK A VET</string>
    <string name="list_dogs">Dogs List</string>
    <string name="no_pets_added">No Pets Added</string>
    <string name="no_pets">It looks You Do not Have Any Pets.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="forget_password">Forget Password</string>
    <string name="forget_passwprd_detail">Provide your account\'s phone for which you want to reset your password!</string>
    <string name="next">NEXT</string>
    <string name="make_selection">Select which contact detail should we use to reset your password?</string>
    <string name="selection">Make Selection</string>
    <string name="via_sms">via sms:</string>
    <string name="via_email">via e-mail:</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credentials_detail">Your identity has been verified!Set your new password</string>
    <string name="new_password">New Password</string>
    <string name="ok">OK</string>
    <string name="password_updated">Password Updated</string>
    <string name="updated_pass">Your password has been updated!</string>
    <string name="code">Code</string>
    <string name="verification">Verification</string>
    <string name="verify_code">Verify Code</string>
    <string name="update_profile_details">Update</string>
    <string name="welcome">Welcome</string>
    <string name="signup">SignUp to start your new Adventure</string>
    <string name="handle_dog">Anyone Can Handle a Dog</string>
    <string name="dog_care">Dog Care</string>
    <string name="choose_an_option">CHOOSE AN OPTION</string>
    <string name="add_dogBtn">Add Dog</string>
    <string name="name_of_pet">Name Of Pet</string>
    <string name="pet_birthday">Pet Birthday</string>
    <string name="primary_breed">Primary Breed</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="let_s_add_a_dog">Let\'s add a dog</string>
</resources>