<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgetPassSuccessMessage"
    android:background="@color/white"
    android:padding="30dp"
    android:orientation="vertical"
    android:layout_marginTop="150dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_updated"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:fontFamily="@font/bungee"
            android:textAlignment="center"
            android:gravity="center">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tick"
            android:layout_gravity="center"
            android:layout_margin="20dp">
        </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updated_pass"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:fontFamily="@font/antic"
        android:textAlignment="center"
        android:layout_gravity="center">
    </TextView>
    <Button
        android:id="@+id/loginBtnPassUpdated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@color/dark_green"
        android:layout_marginTop="30dp">

    </Button>
    </LinearLayout>
