<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DogActivityNew"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/threedogs"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/three"
        android:layout_marginTop="100px"/>

    <TextView
        android:id="@+id/noPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75sp"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/bungee"
        android:text="@string/no_pets_added"
        android:textColor="@color/purple_700"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/anyPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60sp"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/antic"
        android:text="@string/no_pets"
        android:textColor="@color/black"
        android:textSize="20sp" />
    <ImageView
        android:id="@+id/plus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100px"
        android:src="@drawable/plus"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="510dp"
        android:layout_alignParentTop = "true"
        android:dividerHeight="2dp">
    </ListView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/addNewDogBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/add_dogBtn"
            android:fontFamily="@font/bungee"
            android:textSize="10sp"
            android:background="@drawable/roundedcorners"
            android:layout_marginLeft="120dp">

        </Button>
    </LinearLayout>
</LinearLayout>
</ScrollView>