<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".VerifyCode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:includeFontPadding="false"
            android:letterSpacing="0.5"
            android:text="@string/code"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="100sp"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"></TextView>

        <TextView
            android:id="@+id/sendCodeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/antic"
            android:includeFontPadding="false"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"></TextView>

        <com.chaos.view.PinView
            android:id="@+id/otp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:itemCount="6"
            app:itemWidth="50dp"
            app:itemHeight="50dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/dark_green"
            android:itemBackground="@color/light_green"
            style="@style/PinWidget.PinView"
            app:cursorColor="@color/black"
            android:inputType="number"
            android:cursorVisible="true"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/verificationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:text="@string/verify_code"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>